# NCEPLIBS-w3emc

./: .gitmodules  BUILD_INSTALL.INSTRUCTIONS  CMakeLists.txt  FOR_SPA  LICENSE.md  Makefile  Makefile.in  PackageConfig.cmake.in  README  README.md  aea_8f.html  aea_8f_source.html  annotated.html  annotated_dup.js  args__mod_8f.html  args__mod_8f.js  args__mod_8f_source.html  build_w3emc.sh  classes.html  config.status  configure  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  errexit_8f.html  errexit_8f_source.html  errmsg_8f.html  errmsg_8f_source.html  files.html  files_dup.js  fparsei_8f.html  fparsei_8f_source.html  fparser_8f.html  fparser_8f_source.html  gblevents_8f.html  gblevents_8f_source.html  gbyte_8f.html  gbyte_8f_source.html  gbytec_8f.html  gbytec_8f_source.html  (+479 more)
4byte/: CMakeLists.txt
8byte/: CMakeLists.txt
Conf/: AAA_rename_conf.sh  W3emc_gnu_General.sh  W3emc_intel_Cray.sh  W3emc_intel_Dell.sh  W3emc_intel_Gaea.sh  W3emc_intel_General.sh  W3emc_intel_Hera.sh  W3emc_intel_Jet.sh  W3emc_intel_Theia.sh  W3emc_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
config-setup/: gfortran-debug.setup  gfortran-test.setup  gfortran.setup  ifort-cray.setup  ifort-debug.setup  ifort.setup  pgf95-debug.setup  pgf95.setup  wcoss-cray.setup  wcoss.setup  xlf2003-debug.setup  xlf2003.setup
docs/: Doxyfile.in  user_guide.md
double/: CMakeLists.txt
libsrc/: Makefile  Makefile.in  gblevents.f  gblevents.f.old  make.dependencies  make.filelist  make.libw3  make.sh  make.standalone.intel.sh  make.w3.intel.sh  makefile_4  makefile_8  makefile_d  makelibw3.sh  w3fi63.f
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+15 more)
spack/: README  package.py
src/: CMakeLists.txt  Makefile  aea.f  args_mod.f  errexit.f  errmsg.f  fparsei.f  fparser.f  gblevents.f  gblevn_module.mod  gbyte.f  gbytec.f  gbytes.f  gbytesc.f  getbit.f  getgb.f  getgb1.f  getgb1r.f  getgb1re.f  getgb1s.f  getgbe.f  getgbeh.f  getgbem.f  getgbemh.f  getgbemn.f  getgbemp.f  getgbens.f  getgbep.f  getgbex.f  getgbexm.f  getgbh.f  getgbm.f  getgbmh.f  getgbmp.f  getgbp.f  getgi.f  getgir.f  gtbits.f  idsdef.f  instrument.f  (+181 more)
tests/: CMakeLists.txt  compile_testw3emc_wcoss.sh  makefile  test_gbytec.F90  test_summary.f90  test_w3_mod.pf  test_w3emc.f  test_w3emc_mod.pf  test_w3fi71.F90  test_w3fi71.f90  test_w3fi72.F90  test_w3fi73.F90  test_w3fi74.F90  test_w3tagb.F90  test_w3tagb.f90  testw3emc.f  tst_w3.F  tst_w3emc.F
unit_test/: test_cnvgrib_wcoss.sh  test_degrib2_wcoss.sh
ver-2.10.0/: aea_8f.html  aea_8f_source.html  annotated.html  args__mod_8f.html  args__mod_8f_source.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  errexit_8f.html  errexit_8f_source.html  errmsg_8f.html  errmsg_8f_source.html  files.html  fparsei_8f.html  fparsei_8f_source.html  fparser_8f.html  fparser_8f_source.html  gbyte_8f.html  gbyte_8f_source.html  gbytec_8f.html  gbytec_8f_source.html  gbytes_8f.html  gbytes_8f_source.html  gbytesc_8f.html  gbytesc_8f_source.html  getbit_8f.html  getbit_8f_source.html  getgb1_8f.html  getgb1_8f_source.html  getgb1r_8f.html  getgb1r_8f_source.html  getgb1re_8f.html  getgb1re_8f_source.html  getgb1s_8f.html  getgb1s_8f_source.html  getgb_8f.html  getgb_8f_source.html  getgbe_8f.html  getgbe_8f_source.html  getgbeh_8f.html  (+386 more)
ver-2.11.0/: aea_8f.html  aea_8f_source.html  annotated.html  args__mod_8f.js  args__mod_8f_source.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  errexit_8f.html  errmsg_8f.html  files_dup.js  fparsei_8f_source.html  gbyte_8f_source.html  gbytec_8f.html  gbytesc_8f.html  getgb1_8f.html  getgb1r_8f_source.html  getgb1re_8f.html  getgb1re_8f_source.html  getgb1s_8f_source.html  getgb_8f.html  getgb_8f_source.html  getgbem_8f.html  getgbemh_8f.html  getgbemn_8f_source.html  getgbemp_8f_source.html  getgbens_8f.html  getgbens_8f_source.html  getgbep_8f.html  getgbex_8f.html  getgbexm_8f_source.html  getgbh_8f_source.html  getgbm_8f.html  getgbm_8f_source.html  getgbmh_8f_source.html  getgbmp_8f_source.html  getgbp_8f.html  getgbp_8f_source.html  getgi_8f.html  globals_c.html  (+212 more)
ver-2.9.2/: aea_8f.html  aea_8f_source.html  annotated.html  annotated_dup.js  args__mod_8f.html  args__mod_8f_source.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  errexit_8f.html  errexit_8f_source.html  errmsg_8f.html  errmsg_8f_source.html  files.html  files_dup.js  fparsei_8f.html  fparsei_8f_source.html  fparser_8f.html  fparser_8f_source.html  gbyte_8f.html  gbyte_8f_source.html  gbytec_8f.html  gbytec_8f_source.html  gbytes_8f.html  gbytes_8f_source.html  gbytesc_8f.html  gbytesc_8f_source.html  getbit_8f.html  getbit_8f_source.html  getgb1_8f.html  getgb1_8f_source.html  getgb1r_8f.html  getgb1r_8f_source.html  getgb1re_8f.html  getgb1re_8f_source.html  getgb1s_8f.html  getgb1s_8f_source.html  getgb_8f.html  getgb_8f_source.html  getgbe_8f.html  (+426 more)
ver-2.9.3/: aea_8f_source.html  annotated.html  args__mod_8f_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  errexit_8f.html  errmsg_8f.html  errmsg_8f_source.html  files.html  files_dup.js  fparsei_8f_source.html  fparser_8f_source.html  gbytec_8f.html  gbytec_8f_source.html  gbytes_8f_source.html  getbit_8f_source.html  getgb1_8f.html  getgb1re_8f.html  getgb_8f.html  getgb_8f_source.html  getgbe_8f_source.html  getgbeh_8f.html  getgbem_8f_source.html  getgbemh_8f.html  getgbemh_8f_source.html  getgbemp_8f_source.html  getgbep_8f_source.html  getgi_8f.html  (+217 more)
(+111 files in other folders)
